refactor: improve vote management system
- Add proper vote type validation and conversion
- Enhance VoteRepository with efficient queries
- Add ResourceAccessDeniedException for better error handling
- Update VoteDTO with username field and documentation

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     // OpenAPI/Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     
+    // Flyway Migration
+    implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'org.flywaydb:flyway-database-postgresql:9.16.0'
+    
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
